WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211763
Speculative fix for crash in ScrollingTree::handleWheelEvent()
https://bugs.webkit.org/show_bug.cgi?id=211763
Summary
Speculative fix for crash in ScrollingTree::handleWheelEvent()
Simon Fraser (smfr)
Reported
2020-05-11 20:00:18 PDT
Speculative fix for crash in ScrollingTree::handleWheelEvent()
Attachments
Patch
(1.90 KB, patch)
2020-05-11 20:01 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-05-11 20:01:13 PDT
Created
attachment 399090
[details]
Patch
Simon Fraser (smfr)
Comment 2
2020-05-11 20:01:16 PDT
<
rdar://problem/62926117
>
EWS
Comment 3
2020-05-12 10:00:47 PDT
Committed
r261558
: <
https://trac.webkit.org/changeset/261558
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 399090
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug