Speculative fix for crash in ScrollingTree::handleWheelEvent() https://bugs.webkit.org/show_bug.cgi?id=211763 <rdar://problem/62926117>

Reviewed by Andy Estes.

Crash data shows a null-deref crash in ScrollingTree::handleWheelEvent() which
is most likely because m_rootNode is null. Protect against this.

* page/scrolling/ScrollingTree.cpp:
(WebCore::ScrollingTree::handleWheelEvent):


Canonical link: https://commits.webkit.org/224676@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261558 268f45cc-cd09-0410-ab3c-d52691b4dbfc